fix: Unreadable dark mode

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,6 +8,10 @@
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
+  --vt-c-red: #FF1111;
+  --vt-c-red-soft: #FF0000;
+  --vt-c-red-mute: #FF0000;
+
   --vt-c-indigo: #2c3e50;
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
@@ -17,8 +21,8 @@
 
   --vt-c-text-light-1: var(--vt-c-indigo);
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+  --vt-c-text-dark-1: var(--vt-c-red);
+  --vt-c-text-dark-2: rgba(235, 45, 25, 0.84);
 }
 
 /* semantic color variables for this project */
